--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "tsnd --transpile-only --ignore-watch node_modules src/server.ts"
+  },
   "devDependencies": {
+    "ts-node-dev": "^1.0.0-pre.61",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
