--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "ts-node-dev": "^1.0.0-pre.61",
     "typescript": "^3.9.7"
   },
   "dependencies": {
     "@types/node": "^14.6.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.5",
     "path": "^0.12.7",
